<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/title_target_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/target_volume"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_target_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="任意"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/title_target_volume"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tag"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_target_volume" />

    <Spinner
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#ffffff"
        android:entries="@array/tag_list"
        app:layout_constraintLeft_toRightOf="@id/title_tag"
        app:layout_constraintStart_toEndOf="@+id/title_tag"
        app:layout_constraintTop_toBottomOf="@+id/title_target_volume" />



<!--    <EditText-->
<!--        android:id="@+id/pulldown_tag"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:hint="プルダウン表示予定"-->
<!--        app:layout_constraintStart_toEndOf="@+id/title_tag"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title_target_volume" />-->

    <TextView
        android:id="@+id/title_set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_set1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tag" />

    <EditText
        android:id="@+id/weight_set1"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_set1" />

    <TextView
        android:id="@+id/kai_set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kai"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/times_set1"
        app:layout_constraintTop_toBottomOf="@+id/title_set1" />

    <TextView
        android:id="@+id/multiply_set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/multiply"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/kg_set1"
        app:layout_constraintTop_toBottomOf="@+id/title_set1" />

    <EditText
        android:id="@+id/times_set1"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/multiply_set1"
        app:layout_constraintTop_toBottomOf="@+id/title_set1" />

    <TextView
        android:id="@+id/kg_set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="kg"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/weight_set1"
        app:layout_constraintTop_toBottomOf="@+id/title_set1" />

    <TextView
        android:id="@+id/title_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_set2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_set1" />

    <EditText
        android:id="@+id/weight_set2"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_set2" />

    <TextView
        android:id="@+id/kai_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kai"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/times_set2"
        app:layout_constraintTop_toBottomOf="@+id/title_set2" />

    <TextView
        android:id="@+id/multiply_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/multiply"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/kg_set2"
        app:layout_constraintTop_toBottomOf="@+id/title_set2" />

    <EditText
        android:id="@+id/times_set2"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/multiply_set2"
        app:layout_constraintTop_toBottomOf="@+id/title_set2" />

    <TextView
        android:id="@+id/kg_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="kg"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/weight_set2"
        app:layout_constraintTop_toBottomOf="@+id/title_set2" />

    <TextView
        android:id="@+id/title_set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_set3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_set2" />

    <EditText
        android:id="@+id/weight_set3"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_set3" />

    <TextView
        android:id="@+id/kg_set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="kg"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/weight_set3"
        app:layout_constraintTop_toBottomOf="@+id/title_set3" />

    <TextView
        android:id="@+id/multiply_set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/multiply"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/kg_set3"
        app:layout_constraintTop_toBottomOf="@+id/title_set3" />

    <EditText
        android:id="@+id/times_set3"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/multiply_set3"
        app:layout_constraintTop_toBottomOf="@+id/title_set3" />

    <TextView
        android:id="@+id/kai_set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kai"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/times_set3"
        app:layout_constraintTop_toBottomOf="@+id/title_set3" />

<!--    <TextView-->
<!--        android:layout_width=""-->
<!--        android:layout_height=""/>-->

    <TextView
        android:id="@+id/title_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_set4"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_set3" />

    <EditText
        android:id="@+id/weight_set4"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_set4" />

    <TextView
        android:id="@+id/kg_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="kg"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/weight_set4"
        app:layout_constraintTop_toBottomOf="@+id/title_set4" />

    <TextView
        android:id="@+id/multiply_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/multiply"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/kg_set4"
        app:layout_constraintTop_toBottomOf="@+id/title_set4" />

    <EditText
        android:id="@+id/times_set4"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text|number"
        app:layout_constraintStart_toEndOf="@+id/multiply_set4"
        app:layout_constraintTop_toBottomOf="@+id/title_set4" />

    <TextView
        android:id="@+id/kai_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kai"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/times_set4"
        app:layout_constraintTop_toBottomOf="@+id/title_set4" />

    <Button
        android:id="@+id/bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_set4" />

    <TextView
        android:id="@+id/title_total_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_total_volume"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_calculate" />

    <TextView
        android:id="@+id/total_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/title_total_volume"
        app:layout_constraintTop_toBottomOf="@+id/bt_calculate" />

    <TextView
        android:id="@+id/title_volume_gap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="総ボリューム-目標ボリューム："
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_total_volume" />

    <TextView
        android:id="@+id/volume_gap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/title_volume_gap"
        app:layout_constraintTop_toBottomOf="@+id/title_total_volume" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_volume_gap" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>